# VaultMind

./: .gitignore  README.md  pyproject.toml
clients/hermes/: README.md  vaultmind.env.example
clients/hermes/patches/: hermes-memoryos.patch
clients/hermes/skills/memory/: DESCRIPTION.md
clients/hermes/skills/memoryos/: SKILL.md
clients/hermes/skills/vaultmind/: SKILL.md
clients/hermes/skills/vaultmind/scripts/: vaultmind_memory.py
config/: agent-access.env.example  memoryos.env.example
deploy/systemd/user/: memoryos-api.service  memoryos-worker.service  memoryos-worker.timer
scripts/: check_memoryos_access.sh  install_agent_access_env.sh  install_user_service.sh  run_worker_once.sh  start_api.sh
src/memoryos/: app.py  config.py  console.py
src/memoryos/api/: deps.py  routes.py
src/memoryos/cli/: worker.py
src/memoryos/core/: ids.py  runtime.py  text.py
src/memoryos/db/: sqlite_store.py
src/memoryos/models/: schemas.py
src/memoryos/services/: commit.py  retrieval.py  router.py
src/memoryos/ui/: index.html
src/memoryos/ui/assets/: console.css  console.js
tests/: test_api.py
