[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultmind-memoryos"
version = "0.1.0"
description = "Isolated multi-agent memory backend inspired by the MemoryOS spec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "uvicorn>=0.37.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
memoryos-api = "memoryos.app:main"
memoryos-worker = "memoryos.cli.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memoryos = ["ui/index.html", "ui/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
